# PreLabTech-NFT-Marketplace

./: .gitignore  README.md  Smart Contract.sol  hardhat.config.js  package-lock.json  package.json
backend/: .env  package-lock.json  package.json  server.js
backend/config/: default.json
backend/models/: Collection.js  Nft.js  User.js
backend/routes/api/: auth.js  collection.js  nft-origin.js  nft.js  pinata.js
contracts/: AvaxCleverStaking.sol  ERC1155Factory.sol  ERC1155NFT.sol  ERC721Factory.sol  ERC721NFT.sol  ERC721NFTContract.sol  NFT.sol  NFTMarketplace.sol
contracts/Solana/: Anchor.toml
contracts/Solana/programs/prelab/: Cargo.toml
contracts/Solana/programs/prelab/src/: lib.rs  utils.rs
contracts/Solana/tests/: prelab.ts
frontend/: CreateSingle.vue  package-lock.json  package.json  vue.config.js
frontend/src/: main.js
frontend/src/constants/: constant.js
frontend/src/contracts/: NFT.json  contract-address.json
frontend/src/pages/: Collection.vue  Create.vue  CreateCollection.vue  CreateMultipleCollection.vue  CreateSingle copy.vue  CreateSingle(sample).vue  CreateSingle.vue  CreateSingle.vueaaa  CreateSingleCollection.vue  Explore.vue  MyCollection.vue  NFTDetail.vue  ProductDetail.vue  Profile.vue  solana mint.txt
frontend/src/router/: index.js
frontend/src/services/: AuthService.js  collection.service.js  (+1 more)
scripts/: deploy.js  deploy_nft.js
src/: main.js
src/pages/: ProductDetail.vue  Profile.vue
src/router/: index.js
src/services/: AuthService.js
src/store/: auth.module.js  index.js  store.js
test/: NFT.js
(+41 files in other folders)
